# work3_many-2-many

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  debug_fullmodel.py  debug_rh.py  full_run_output.txt  pyproject.toml  run_experiments.py  smoke_test.py  smoke_test_output.txt  test_fix.py  test_fix_output.txt  test_scale100.py  test_scale100_output.txt  test_scale500.py  test_scale500_output.txt  工作3讨论.md  开题报告-3.30.md
.claude/: settings.json  settings.local.json
.planning/: CLAIMS_AND_RISKS.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  REQUIREMENTS_v2.md  ROADMAP.md  ROADMAP_v2.md  STATE.md  config.json
analysis/: equity.py  policy.py  sensitivity.py  test_sensitivity.py
archive/: paper_full_v3.txt
docs/: 工作3公开数据集.txt  工作3讨论-6.14.md
experiments/: algorithm_diagnostics.py  config.py  endogenous_matched_coverage.py  formal_statistics.py  formal_validation.py  matched_coverage.py  metrics.py  milp_gap.py  pareto_sweep.py  phase05_coverage_smoke.py  phase05_pilot.py  phase06_coverage_controls.py  phase06_formal.py  phase06_robustness.py  phase06_supplementary.py  pilot_validation.py  runner.py  scenarios.py  variants.py  weight_sensitivity.py
manuscript/: cas-common.sty  main.tex  response_to_reviewers.tex
model/: constraints.tex  model.aux  model.out  model.toc  notation.tex  problem-definition.tex  three-layer.tex
paper/: cover_letter.tex  cover_letter.txt  main.tex  references.bib  response_to_reviewers.tex  response_to_reviewers.txt
paper_work3/: main.aux  main.bbl  main.blg  main.out  main.tex  references.bib  response_to_reviewers.tex
(+475 files in other folders)
